전남대 BE_조현서 4주차 과제 (3단계) (#402)
* docs: Update README step1

* feat: Add Category Entity

* feat: Add Category DTO

* feat: Add Category Controller

* feat: Add Category Repository

* feat: Add Category Service

* feat: Add Category Value

* feat: 상품에 카테고리 추가

* feat: 상품 Controller에 카테고리 추가

* feat: 상품 Dto에 카테고리 추가

* feat: 상품Service에 카테고리 추가

* chore: Update application.properties

* feat: html에 카테고리 추가

* test: 카테고리 추가에 따른 test 코드 수정

* refactor: 사용하지 않는 setter 제거

* refactor: 불필요한 종속성 제거

* refactor: 사용하지 않는 findByName 삭제

* refactor: 사용하지 않는 import 삭제

* chore: Test 코드 패키지 변경

* feat: MemberRequest 생성자 추가

* test: Member register 확인 테스트

* docs: Update Step2 README.md

* style: README 줄바꿈 수정

* chore: Update application.properties

* feat: Add product, category, option sql

* feat: 각 데이터 값 추가

카테고리, 상품, 옵션 데이터 값 추가

* feat: Add Option Entity

* feat: Add Option DTO

* feat: Add Option Repository

* style: 주석 제거

* feat: Add Option Service

* feat: Add Option Controller

* refactor: 사용하지 않는 Config 삭제

* style: 컨벤션에 맞춰 수정

* refactor: 안 쓰는 import 삭제

* refactor: .toList() 로 수정

* feat: 옵션-상품 연관관계 추가

* style: 문구 수정

* refactor: 복수형으로 이름 변경

* feat: 옵션 삭제 구현

* feat: 동일 상품명 등록 시 에러 처리 추가

* fix: test code 에러 수정

* fix: html 수정

* feat: 옵션의 수량을 지정된 숫자만큼 빼는 기능 추가

* docs: Update Step3 README.md

* test: Option Service Test 추가